name:                 ghc-split
version:              0.1.0.0
cabal-version:        >=1.10
license:              BSD3
build-type:           Simple
license-file:         LICENSE
stability:            experimental
synopsis:             Assembly file splitter
description:          Assembly file splitter
category:             Development
Extra-Source-Files:     cbits/engine.c cbits/cclass.h cbits/cname.h
                        cbits/regex2.h cbits/regex.h cbits/utils.h
                        
executable ghc-split
  default-language: Haskell2010
  Other-Extensions: CPP

  build-depends:
    base >= 4 && < 5,
    directory,
    bytestring,
    filepath,
    ghc,
    array,
    containers
    
  C-Sources:            c-finalizer/myfree.c
  Include-Dirs:         c-finalizer
  
  default-extensions: MultiParamTypeClasses, FunctionalDependencies, CPP,
                      ForeignFunctionInterface, GeneralizedNewtypeDeriving,
                      FlexibleContexts, TypeSynonymInstances,
                      FlexibleInstances
  
  main-is: Main.lhs
  CPP-Options: "-DSPLIT_BASE=1"
  include-dirs: ../../mk
  if os(windows)
    CC-Options:           -DHAVE_REGEX_H
    C-Sources:            cbits/reallocf.c cbits/regcomp.c cbits/regerror.c
                          cbits/regexec.c cbits/regfree.c
    Include-Dirs:         cbits
    
  Other-Modules:          Text.Regex.Base, 
                          Text.Regex.Base.RegexLike,
                          Text.Regex.Base.Context,
                          Text.Regex.Base.Impl,
                          
                          Text.Regex.Posix,
                          Text.Regex.Posix.Wrap,
                          Text.Regex.Posix.String,
                          Text.Regex.Posix.Sequence,
                          Text.Regex.Posix.ByteString,
                          Text.Regex.Posix.ByteString.Lazy
  hs-source-dirs: src
  GHC-Options:            -Wall -O2

