name:                 ghc-split
version:              0.1.0.0
cabal-version:        >=1.10
license:              BSD3
build-type:           Simple
license-file:         LICENSE
stability:            experimental
synopsis:             Assembly file splitter
description:          Assembly file splitter
category:             Development
Extra-Source-Files:   cbits/engine.c 
                      cbits/cclass.h 
                      cbits/cname.h
                      cbits/regex2.h 
                      cbits/regex.h 
                      cbits/utils.h
                        
executable ghc-split
  default-language: Haskell2010
  Other-Extensions: CPP

  build-depends:
    base >= 4 && < 5,
    directory,
    bytestring,
    filepath,
    ghc,
    array,
    containers,
    transformers 
  
  default-extensions: MultiParamTypeClasses     , 
                      FunctionalDependencies    , 
                      CPP                       ,
                      ForeignFunctionInterface  , 
                      GeneralizedNewtypeDeriving,
                      FlexibleContexts          , 
                      TypeSynonymInstances      ,
                      FlexibleInstances         , 
                      ScopedTypeVariables
  
  main-is: Main.lhs
  CPP-Options: "-DSPLIT_BASE=1"
  include-dirs: ../../mk
  CC-Options:   -DHAVE_PCRE_H -DHAVE_CONFIG_H -DPCRE_STATIC -DHAVE_INTTYPES_H -DHAVE_STDINT_H -DHAVE_STDLIB_H
  Include-dirs: pcre
  Includes: pcre.h config.h
  C-sources:
      pcre/pcre_byte_order.c 
      pcre/pcre_compile.c 
      pcre/pcre_config.c 
      pcre/pcre_chartables.c 
      pcre/pcre_dfa_exec.c 
      pcre/pcre_exec.c 
      pcre/pcre_fullinfo.c 
      pcre/pcre_get.c 
      pcre/pcre_globals.c 
      pcre/pcre_jit_compile.c 
      pcre/pcre_maketables.c 
      pcre/pcre_newline.c 
      pcre/pcre_ord2utf8.c 
      pcre/pcre_refcount.c 
      pcre/pcre_string_utils.c 
      pcre/pcre_study.c 
      pcre/pcre_tables.c 
      pcre/pcre_ucd.c 
      pcre/pcre_valid_utf8.c 
      pcre/pcre_version.c 
      pcre/pcre_xclass.c

    
  Other-Modules:          Text.Regex.Base, 
                          Text.Regex.Base.RegexLike,
                          Text.Regex.Base.Context,
                          Text.Regex.Base.Impl,
                          
                          Text.Regex.PCRE,
                          Text.Regex.PCRE.Wrap,
                          Text.Regex.PCRE.String,
                          Text.Regex.PCRE.Sequence,
                          Text.Regex.PCRE.ByteString,
                          Text.Regex.PCRE.ByteString.Lazy,
                          
                          Data,
                          Utils,
                          Session,
                          
                          Darwin,
                          PowerPC,
                          Sparc,
                          X86_X86_64
  hs-source-dirs: src
  GHC-Options:            -Wall -O2

